--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,3 +1,1 @@
-LP's Blog: http://pengloo53.farbox.com
-xiaoxiao's Blog: http://xiaoyun.farbox.com
-说说事: http://www.saysays.com
+QustDong's Blog: http://blog.csdn.net/qustdong
